src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
    --stripe-blue-rgb: 47, 76, 121;
    --stripe-orange-rgb: 224, 98, 54;
    --stripe-red-rgb: 200, 35, 55;
    --stripe-yellow-rgb: 215, 171, 97;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  /* background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */
}

h1, h2 {
  color: black;
  margin-bottom: 1rem;
}

h1 {
  font-size: 2.25em;
  line-height: 2.5rem;
  text-align: center;
}

h2 {
  font-size: 1.5rem;
  line-height: 2rem;
}

a {
  cursor: pointer;
  font-weight: 500;
  color: rgb(var(--stripe-blue-rgb));
}

ol, ul, menu {
  list-style-type: disc;
  margin-bottom: 1em;
  margin-top: 1em;
  padding-left: 2em;
}

button {
  background-color: rgb(var(--stripe-blue-rgb));
  border: none;
  color: white;
  padding: 0.5rem 1rem;
  border-radius: 8px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}

button:enabled:hover {
  background-color: rgb(var(--stripe-orange-rgb));
}

button:disabled {
  opacity: 0.5;
}

button.secondary {
  background-color: white;
  border: 2px solid rgb(var(--stripe-blue-rgb));
  color: rgb(var(--stripe-blue-rgb));
}

button.secondary:hover {
  background-color: white;
  border: 2px solid rgb(var(--stripe-orange-rgb));
  color: rgb(var(--stripe-orange-rgb));
}

.sb-l::before, .sb-l::after, .sb-r:after, .sb-r::before {
  content: "";
  width: 0px;
  height: 0px;
  position: absolute;
}

.sb-r:before {
  border-right: 10px solid black;
  border-left: 10px solid transparent;
  border-top: 10px solid black;
  border-bottom: 10px solid transparent;
  left: -20px;
  top: -2px;
}

.sb-r:after {
  border-left: 8px solid transparent;
  border-right: 10px solid #fff;
  border-top: 10px solid #fff;
  border-bottom: 8px solid transparent;
  left: -16px;
  top: 0px; 
}

.sb-l:before {
  border-right: 10px solid transparent;
  border-left: 10px solid black;
  border-top: 10px solid black;
  border-bottom: 10px solid transparent;
  right: -20px;
  top: -2px;
}

.sb-l:after {
  border-left: 8px solid #fff;
  border-right: 10px solid transparent;
  border-top: 10px solid #fff;
  border-bottom: 8px solid transparent;
  right: -16px;
  top: 0px; 
}

.nav-item:hover .nav-stripes {
  .stripe {
    transform:scaleX(1);
  }
}

input[type=text], input[type=textarea], textarea {
  border: 2px black solid;
}

input[type=radio], input[type=checkbox] {
  margin-left: 2rem;
  color: red;
  background-color: red;
}

.issue-report-option {
  padding: 8px 0;
}

blockquote {
  background-color: lightgray;
  border-left: 4px solid #000;
  padding-left: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
}

